--- a/css/estilos.css
+++ b/css/estilos.css
@@ -76,6 +76,8 @@ body
 	margin-top: 1px;
 	margin-left: auto;
 	margin-right: auto;
+	background-color:#008FB3;
+	
 }
 
 
@@ -84,6 +86,7 @@ body
 	padding: 60px;
 	margin-left: auto;
 	margin-right: auto;
+	background-color:#008FB3;
 	
 	
 	
