--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,9 +5,9 @@
 /* CSS Document */
 /*contenedor general del titulo dela pagina*/
 #divheaderprincipal{
-	background-color:transparent;
-	padding: 10px;
+	background-color:antiquewhite;
 	
+	padding: 10px;
 	
 	overflow: hidden;
 	margin: auto;
@@ -70,7 +70,7 @@ body
 /*contenedor barra de navegacion*/
 #divnav{
 	padding: 5px 0;
-	width: 100%;
+	width: absolute;
 	display: block;
 	clear: both;
 	margin-top: 1px;
@@ -174,8 +174,8 @@ section{
 	display: block;
 	text-align: left;
 	background-color: #0033FF;
-	width: 1100px;
-	height: auto;
+	width: absolute;
+	height: absolute;
 	margin-top: auto;
 	padding-left: center;
 	
@@ -239,6 +239,27 @@ height: 80%;
 	margin: auto;
 }
 
+img[src="img/entidad.png"]
+{
+	height: 50%;
+	width: 50%;
+	display: block;
+	margin: auto;
+}
+img[src="img/simbolo_uno_a_muchos.jpg"]
+{
+	height: 50%;
+	width: 50%;
+	display: block;
+	margin: auto;
+}
+img[src="img/simbolo_uno_a_uno.png"]
+{
+	height: 50%;
+	width: 50%;
+	display: block;
+	margin: auto;
+}
 
 
 
