--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,25 +40,6 @@ img[src ="img/logoUNAD.png"]
 	float: right;
 }
 
-
-
-
-
-
-
-/*
-#TituloPagina{
-	
-	margin: 0 auto;
-	color: #000000;
-	text-align: center;
-	font-size: 40px;
-	background-color: darkblue;
-	margin-top: 0px;
-	padding: 50px 0px;
-	
-}
-*/
 body
 {
 
@@ -159,9 +140,9 @@ aside{
 	
 	background-color: #999999;
 	float: left;
-	width: auto;
-	height:auto;
-	
+	width: 600px;
+	height:100%;
+	margin: auto;
 	margin-left:auto;
 	display: block;
 	padding-left: center;
@@ -175,7 +156,7 @@ section{
 	text-align: left;
 	background-color: #0033FF;
 	width: absolute;
-	height: absolute;
+	height: 100%;
 	margin-top: auto;
 	padding-left: center;
 	
@@ -193,16 +174,17 @@ footer
 	
 	padding-left: center;
 	background-color: #808080;
-	height: 100%;
+	height: 60px;
 	width: 100%;
 }
 
 p{
 	font-size: 30px;
-	margin-left: 20px;
-	padding: 20px;
-	margin-right: 20px;
+	margin-left: 10px;
+	padding: 50px;
+	margin-right: 50px;
 	text-align: justify;
+	
 }
 
 
