--- a/css/estilos.css
+++ b/css/estilos.css
@@ -243,6 +243,14 @@ img[src="img/simbolo_uno_a_uno.png"]
 	margin: auto;
 }
 
+article1{
+	height: 50%;
+	width: 50%;
+	display: block;
+	margin: auto;
+	
+}
+
 
 
 
