--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,8 @@
 
 body
 {
+	margin:0 auto;
+	
 	height: auto;
 	width: auto;
 }
@@ -49,17 +51,11 @@ img[src ="img/logoUNAD.png"]
 	float: right;
 }
 
-body
-{
 
-	text-align: left;
-	width: auto;
-	
-}
 
 /*contenedor barra de navegacion*/
 
-
+/*
 #divnav{
 	padding: 5px 0;
 	width: auto;
@@ -72,13 +68,13 @@ body
 	
 }
 
-
+*/
 
 
 #divnavinterno{
-	width: 1050px;
+	width: absolute;
 	padding: 60px;
-	margin-left: auto;
+	margin-left: 1px;
 	margin-right: auto;
 	background-color:#008FB3;
 	clear: both;
@@ -90,7 +86,7 @@ body
 
 nav{
 	
-	margin-left: 300px;
+	
 	width: auto;
 	height: auto;
 }
@@ -120,7 +116,7 @@ ul li
 {
 	
 	float: left;
-	width: 150px;
+	width: 140px;
 	
 }
 
@@ -143,13 +139,19 @@ ul li:hover > ul
 	background-color: transparent;
 	display:flex;
 	clear: both;
-	margin-left: 20px;
+	margin-left: 10px;
 	padding-left: center;
 	width: absolute;
 	height: absolute;
 	
 }
-
+#divaside
+{
+	width: 300px;
+	height: 100%;
+	display:inline-block;
+	float: right;
+}
 
 
 
@@ -158,8 +160,8 @@ aside{
 	
 	background-color: #999999;
 	float: left;
-	width: 200px;
-	height:600px;
+	width: 300px;
+	height: 600px;
 	margin: auto;
 	margin-left:auto;
 	display: block;
@@ -174,7 +176,7 @@ aside{
 
 #divsection{
 	
-	width: absolute;
+	width: 100%;
 	height:absolute;
 	display:inline-block;
 	float: right;
