--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,6 @@
 body
 {
 	margin:0 auto;
-	
 	height: auto;
 	width: auto;
 }
@@ -148,9 +147,11 @@ ul li:hover > ul
 #divaside
 {
 	width: 300px;
-	height: 100%;
+	height: 700px;
 	display:inline-block;
 	float: right;
+	
+	
 }
 
 
@@ -161,7 +162,7 @@ aside{
 	background-color: #999999;
 	float: left;
 	width: 300px;
-	height: 600px;
+	height: 700px;
 	margin: auto;
 	margin-left:auto;
 	display: block;
@@ -204,20 +205,22 @@ footer
 {
 	text-align: center;
 	margin-top: 2px;
-	clear: both;
+	margin: auto;
 	
 	padding-left: center;
 	background-color: #808080;
-	height: 60px;
-	width: 100%;
+	height: 80px;
+	width: auto;
+	
+	
 }
-
+/*
 #divfooter
 {
-	width: auto;
+	width: 100%;
 	height: auto;
 }
-
+*/
 p{
 	font-size: 30px;
 	margin-left: 10px;
@@ -244,6 +247,8 @@ img[src="img/relacion_uno_uno_1_1.png"]
 {
 	display: block;
 	margin: auto;
+	height: 80%;
+	width: 80%;
 	
 }
 img[src="img/1_a_muchos_relacion.png"]
