trabajo fase de construccion
fase de construccion terminada

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -189,7 +189,7 @@ section{
 	
 	display: block;
 	text-align: right;
-	background-color: #0033FF;
+	background-color: transparent;
 	width: absolute;
 	height: 100%;
 	margin-top: auto;
